[gd_scene load_steps=10 format=3 uid="uid://brv7l2iku2ciy"]

[ext_resource type="Script" uid="uid://ct8gljh14lgnm" path="res://Scripts/spotlight_detection.gd" id="1_ahlui"]
[ext_resource type="Texture2D" uid="uid://drluumk324478" path="res://Assets/Temp Imports/light_decal.png" id="2_torlo"]

[sub_resource type="SphereShape3D" id="SphereShape3D_torlo"]
radius = 3.0

[sub_resource type="BoxMesh" id="BoxMesh_bfkpc"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_torlo"]
blend_mode = 1

[sub_resource type="CylinderMesh" id="CylinderMesh_blsrq"]
top_radius = 4.5
bottom_radius = 0.0
height = 6.0
radial_segments = 24
rings = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lvkpg"]
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0.988235, 1, 0.603922, 1)
metallic = 0.26
metallic_specular = 1.0
clearcoat_enabled = true
clearcoat_roughness = 0.62

[sub_resource type="SphereMesh" id="SphereMesh_1lccf"]
radius = 0.125
height = 0.25

[sub_resource type="SphereMesh" id="SphereMesh_em3xp"]
radius = 0.125
height = 0.25

[node name="Spotlight Detection" type="Node3D"]
script = ExtResource("1_ahlui")
is_spotlight = true

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)
shape = SubResource("SphereShape3D_torlo")

[node name="SpotLight3D" type="SpotLight3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7.24754e-13, 0)
visible = false
light_color = Color(0.95, 0.910417, 0.7125, 1)
light_energy = 2.0
light_cull_mask = 4294967293
shadow_enabled = true
shadow_bias = 0.125
distance_fade_enabled = true
distance_fade_shadow = 40.0
distance_fade_length = 40.0
spot_range = 8.0
spot_attenuation = 0.0
spot_angle = 40.0
spot_angle_attenuation = 0.05

[node name="Decal Floor" type="Decal" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, -4.68958e-13, 0, 4.68958e-13, 1, 0, 0.00537252, -3.0316)
size = Vector3(6.25, 4, 5.92691)
texture_albedo = ExtResource("2_torlo")
normal_fade = 0.5
upper_fade = 1.5
lower_fade = 1.5

[node name="Decal Wall" type="Decal" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -2.18558e-08, -2.99999)
size = Vector3(6.25, 5.875, 6)
texture_albedo = ExtResource("2_torlo")
normal_fade = 0.5
upper_fade = 1.5
lower_fade = 1.5

[node name="Decal Wall Raycast" type="RayCast3D" parent="Area3D"]
target_position = Vector3(0, -0.75, -6)

[node name="Look At Player" type="Node3D" parent="."]

[node name="Look At Reference" type="MeshInstance3D" parent="Look At Player"]
mesh = SubResource("BoxMesh_bfkpc")
surface_material_override/0 = SubResource("StandardMaterial3D_torlo")

[node name="Ray Follow Player" type="RayCast3D" parent="Look At Player"]
target_position = Vector3(0, 0, -40)
debug_shape_custom_color = Color(1, 1, 0, 1)
debug_shape_thickness = 1

[node name="Spotlight Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -3.03354)
visible = false
mesh = SubResource("CylinderMesh_blsrq")

[node name="TestMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
visible = false
material_override = SubResource("StandardMaterial3D_lvkpg")
mesh = SubResource("SphereMesh_1lccf")

[node name="Return Origin" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6)
visible = false
mesh = SubResource("SphereMesh_em3xp")

[node name="Detection Lost Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="Detection Lost Timer" to="." method="_on_detection_lost_timer_timeout"]
